<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="no_image_selected">No media selected</string>
    <string name="content_description">menampilkan gambar yang dianalisis</string>
    <string name="masukkan_gambar">Mulai dengan memasukkan gambar</string>
    <string name="bookmark_item">Simpan item</string>
    <string name="result_activity">Result</string>
    <string name="bookmark_page">Bookmark</string>
    <string name="result_string">%s : %s</string>
    <string name="image_save_failed">Gagal Menyimpan Gambar</string>
    <string name="no_bookmark_message">Tidak Ada Bookmark Scan</string>
    <string name="preview_image">Preview Image</string>
    <string name="bookmark_button">Tombol Bookmark</string>
    <string name="item_bookmark_image">Gambar item bookmark</string>
</resources>